Resolução das atividades solicitadas na aula 07 utilizando Collectors e Comparators.